// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boolean-expression with_binary_expr ast: ast 1`] = `
Object {
  "body": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "left": Object {
      "base": Object {
        "base": Object {
          "innerComments": Array [],
          "leadingComments": Array [],
          "loc": Object {
            "end": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": Object {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "name": "req",
          "trailingComments": Array [],
          "type": "Identifier",
        },
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": Object {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "member": Object {
          "innerComments": Array [],
          "leadingComments": Array [],
          "loc": Object {
            "end": Object {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "name": "http",
          "trailingComments": Array [],
          "type": "Identifier",
        },
        "trailingComments": Array [],
        "type": "Member",
      },
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 15,
          "line": 1,
          "offset": 14,
        },
        "start": Object {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
      },
      "member": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
          "start": Object {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "name": "Debug",
        "trailingComments": Array [],
        "type": "Identifier",
      },
      "trailingComments": Array [],
      "type": "Member",
    },
    "loc": Object {
      "end": Object {
        "column": 22,
        "line": 1,
        "offset": 21,
      },
      "start": Object {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
    },
    "operator": "==",
    "right": Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 22,
          "line": 1,
          "offset": 21,
        },
        "start": Object {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
      },
      "trailingComments": Array [],
      "type": "StringLiteral",
      "value": "\\"1\\"",
    },
    "trailingComments": Array [],
    "type": "BinaryExpression",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 23,
      "line": 1,
      "offset": 22,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "trailingComments": Array [],
  "type": "BooleanExpression",
}
`;

exports[`boolean-expression with_binary_expr format: format long 1`] = `(req.http.Debug == "1")`;

exports[`boolean-expression with_binary_expr format: format short 1`] = `
(
  req
    .http
    .Debug ==
    "1"
)
`;

exports[`boolean-expression with_binary_expr token 1`] = `
Array [
  (,
  req,
  .,
  http,
  .,
  Debug,
  ==,
  "1",
  ),
]
`;

exports[`boolean-expression with_logical_expr ast: ast 1`] = `
Object {
  "body": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "left": Object {
      "base": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": Object {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "name": "var",
        "trailingComments": Array [],
        "type": "Identifier",
      },
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "start": Object {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
      },
      "member": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": Object {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "name": "Debug",
        "trailingComments": Array [],
        "type": "Identifier",
      },
      "trailingComments": Array [],
      "type": "Member",
    },
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 1,
        "offset": 16,
      },
      "start": Object {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
    },
    "operator": "&&",
    "right": Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 17,
          "line": 1,
          "offset": 16,
        },
        "start": Object {
          "column": 15,
          "line": 1,
          "offset": 14,
        },
      },
      "trailingComments": Array [],
      "type": "StringLiteral",
      "value": "\\"1\\"",
    },
    "trailingComments": Array [],
    "type": "LogicalExpression",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 18,
      "line": 1,
      "offset": 17,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "trailingComments": Array [],
  "type": "BooleanExpression",
}
`;

exports[`boolean-expression with_logical_expr format: format long 1`] = `(var.Debug && "1")`;

exports[`boolean-expression with_logical_expr format: format short 1`] = `
(
  var.Debug &&
    "1"
)
`;

exports[`boolean-expression with_logical_expr token 1`] = `
Array [
  (,
  var,
  .,
  Debug,
  &&,
  "1",
  ),
]
`;
